base/kyverno-policies-mutate/add-goldilocks-label-by-project.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-goldilocks-label-by-project
spec:
  rules:
    - name: label-goldilocks-namespaces
      match:
        resources:
          kinds:
            - Namespace
          selector:
            matchExpressions:
              - key: field.cattle.io/projectId
                operator: In
                values:
                  - infrastructure
                  - applications
      exclude:
        any:
          - resources:
              names:
                - argocd
                - nvidia
          - resources:
              selector:
                matchLabels:
                  platform.suncoast.systems/goldilocks: "disabled"
          - resources:
              selector:
                matchLabels:
                  platform.suncoast.systems/vpa-exclude: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              platform.suncoast.systems/autosize: "enabled"
              goldilocks.fairwinds.com/enabled: "true"
      skipBackgroundRequests: true
    - name: remove-autosize-label-outside-projects
      match:
        any:
          - resources:
              kinds:
                - Namespace
              selector:
                matchLabels:
                  platform.suncoast.systems/autosize: "enabled"
                matchExpressions:
                  - key: field.cattle.io/projectId
                    operator: NotIn
                    values:
                      - infrastructure
                      - applications
          - resources:
              kinds:
                - Namespace
              selector:
                matchLabels:
                  platform.suncoast.systems/autosize: "enabled"
                matchExpressions:
                  - key: field.cattle.io/projectId
                    operator: DoesNotExist
          - resources:
              kinds:
                - Namespace
              names:
                - argocd
                - nvidia
          - resources:
              kinds:
                - Namespace
              selector:
                matchLabels:
                  platform.suncoast.systems/autosize: "enabled"
                  platform.suncoast.systems/vpa-exclude: "true"
          - resources:
              kinds:
                - Namespace
              selector:
                matchLabels:
                  platform.suncoast.systems/autosize: "enabled"
                  platform.suncoast.systems/goldilocks: "disabled"
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              platform.suncoast.systems/autosize: null
              goldilocks.fairwinds.com/enabled: null
      skipBackgroundRequests: true
