base/kyverno-policies-mutate/suspend-vpa-patch-pipeline.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: suspend-vpa-patch-pipeline
spec:
  rules:
    - name: suspend-vpa-recommendation-apply
      match:
        resources:
          kinds:
            - CronJob
          names:
            - vpa-recommendation-apply
          namespaces:
            - goldilocks
      mutate:
        patchStrategicMerge:
          spec:
            suspend: true
    - name: suspend-vpa-recommendation-exporter
      match:
        resources:
          kinds:
            - CronJob
          names:
            - vpa-recommendation-exporter
          namespaces:
            - goldilocks
      mutate:
        patchStrategicMerge:
          spec:
            suspend: true
