base/kyverno-policies-mutate/system-namespace-priority.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: system-namespace-priority
spec:
  background: true
  rules:
    - name: default-system-priority
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchLabels:
                  platform.suncoast.systems/system: "true"
      mutate:
        patchStrategicMerge:
          spec:
            +(priorityClassName): platform-system-high
